--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
