--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "firebase": "^10.12.2",
     "json-server": "^0.17.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
