--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,5 @@
-#Base Path for Fake REST API
+# Base Path for Fake REST API
+# VITE_API_BASE_URL='http://localhost:3000/api/v1'
 
-#VITE_API_BASE_URL='http://localhost:3000'
-
-
-#Base Path for ASP.NET Core REST API
-
+# Base Path for ASP.NET Core REST API
 VITE_API_BASE_URL='http://localhost:5147/api/v1'
