--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
     "json-server": "^0.17.4",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
