--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@
 # VITE_API_BASE_URL='http://localhost:3000/api/v1'
 
 # Base Path for ASP.NET Core REST API
-VITE_API_BASE_URL='http://20.83.186.55:8080/api/v1/'
+VITE_API_BASE_URL='http://20.83.186.55:8080/api/v1'
